--- a/index.html
+++ b/index.html
@@ -109,31 +109,31 @@
           <div class="skill">
             <div class="skill-name">HTML</div>
             <div class="prog">
-              <span data-prog="50%;"></span>
+              <span data-prog="50%"></span>
             </div>
           </div>
           <div class="skill">
             <div class="skill-name">CSS</div>
             <div class="prog">
-              <span data-prog="80%;"></span>
+              <span data-prog="80%"></span>
             </div>
           </div>
           <div class="skill">
             <div class="skill-name">JAVA SCRIPT</div>
             <div class="prog">
-              <span data-prog="90%;"></span>
+              <span data-prog="90%"></span>
             </div>
           </div>
           <div class="skill">
             <div class="skill-name">PHP</div>
             <div class="prog">
-              <span data-prog="70%;"></span>
+              <span data-prog="70%"></span>
             </div>
           </div>
           <div class="skill">
             <div class="skill-name">MYSQL</div>
             <div class="prog">
-              <span data-prog="60%;"></span>
+              <span data-prog="60%"></span>
             </div>
           </div>
         </div>
